--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,8 @@ p {
 }
 
 
+
+
 /*-------------------------------*/
 /*------------Footer--------------*/
 /*-------------------------------*/
@@ -408,6 +410,67 @@ p {
     transform: rotate(-90deg);
     font-size: 4rem;
     border: 0.1rem solid var(--primary-color);
+}
+
+.hab-click-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 1px;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.hab-click {
+    margin: auto;
+    max-width: 70rem;
+    background: var(--secondary-color);
+    border-radius: 5px;
+    color: var(--white-color);
+    text-shadow: 2px 2px var(--primary-color);
+    border: 1px solid var(--white-color);
+}
+
+.hab-click-x {
+    top: 1rem;
+    right: 1rem;
+    width: 2.5rem;
+    background: var(--strong-color);
+    font-weight: bold;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+
+.hab-click-p {
+    padding: 2rem 3rem;
+}
+
+.hab-click button {
+    padding: 0.3rem;
+}
+
+.btn-ext {
+    display: flex;
+    justify-content: end;
+}
+
+.btn-site {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+}
+
+.btn-site button {
+    background-color: #206f8d;
+    color: var(--white-color);
+    padding: 1rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.hide {
+    display: none;
 }
 
 
@@ -525,5 +588,7 @@ p {
         padding: 0 2rem;
         text-align: center;
     }
+
+    
 
 }
